turned on wifi thing

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <!-- body -->
-  <!-- <div id="intro" class="intro"><h3>Turn off your WIFI to see anything.</h3></div> -->
+  <div id="intro" class="intro"><h3>Turn off your WIFI to continue.</h3></div>
   <div id="wrapper" class="wrapper">
 <div class="container">
   <div class="header">
