--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <!-- head section -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Private press</title>
 
   <!-- font google -->
@@ -14,21 +14,7 @@
 </head>
 <body>
   <!-- body -->
-  <div id="intro" class="intro">
-    <div id="wait"><h3>Turn off your WIFI to continue.</h3>
-
-    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50">
-        <path fill="#FFFFFF" d="M25,5A20.14,20.14,0,0,1,45,22.88a2.51,2.51,0,0,0,2.49,2.26h0A2.52,2.52,0,0,0,50,22.33a25.14,25.14,0,0,0-50,0,2.52,2.52,0,0,0,2.5,2.81h0A2.51,2.51,0,0,0,5,22.88,20.14,20.14,0,0,1,25,5Z">
-            <animateTransform attributeName="transform" type="rotate" from="0 25 25" to="360 25 25" dur="0.5s" repeatCount="indefinite"/>
-        </path>
-    </svg>
-    </div>
-
-    <div id="go"><h3>Go</h3>
-      <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50"><path fill="#FFFFFF" d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm4.393 7.5l-5.643 5.784-2.644-2.506-1.856 1.858 4.5 4.364 7.5-7.643-1.857-1.857z"/></svg>
-  </div>
-</div>
-
+  <div id="intro" class="intro"><h3>Turn off your WIFI to continue.</h3></div>
   <div id="wrapper" class="wrapper">
 <div class="container">
   <div class="header">
