--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ To put it briefly, the resistance of the society was so great and showed such fi
 
 
 <figure>
-    <img src="images/Printer2.jpg" class="center" alt="printer"/>
+    <img src="images/printer2.jpg" class="center" alt="printer"/>
     <figcaption>
       12. Printers form Nowa underground press at work with stencil printer.
 
